Move subject_alterative_dns_names into Options

--- a/crates/stackable-webhook/Cargo.toml
+++ b/crates/stackable-webhook/Cargo.toml
@@ -29,3 +29,6 @@ tower.workspace = true
 tracing.workspace = true
 tracing-opentelemetry.workspace = true
 x509-cert.workspace = true
+
+[dev-dependencies]
+clap.workspace = true
