--- a/crates/stackable-versioned-macros/Cargo.toml
+++ b/crates/stackable-versioned-macros/Cargo.toml
@@ -12,14 +12,10 @@ all-features = true
 
 [package.metadata.cargo-udeps.ignore]
 # cargo-udeps throws an error stating that these dependencies are unused. They
-# are, however, used in K8s specific test cases. This is a false-positive and an
-# apparent limitation of cargo-udeps. These entries can be removed once
-# cargo-udeps supports detecting usage of such dependencies.
-development = ["k8s-openapi", "schemars", "serde_yaml", "stackable-versioned"]
-
-# cargo-udeps throws an error stating that these dependencies are unused. They are all marked as
-# optional, which trips up cargo-udeps for whatever reason...
-normal = ["k8s-openapi", "kube"]
+# are, however, used in test cases. This is a false-positive and an apparent
+# limitation of cargo-udeps. These entries can be removed once cargo-udeps
+# supports detecting usage of such dependencies.
+# development = ["k8s-openapi", "schemars", "serde_yaml", "stackable-versioned"]
 
 [lib]
 proc-macro = true
@@ -31,8 +27,6 @@ convert_case.workspace = true
 darling.workspace = true
 indoc.workspace = true
 itertools.workspace = true
-k8s-openapi.workspace = true
-kube.workspace = true
 proc-macro2.workspace = true
 syn.workspace = true
 quote.workspace = true
@@ -42,6 +36,8 @@ quote.workspace = true
 stackable-versioned = { path = "../stackable-versioned" }
 
 insta.workspace = true
+k8s-openapi.workspace = true
+kube.workspace = true
 prettyplease.workspace = true
 regex.workspace = true
 rstest.workspace = true
