--- a/crates/stackable-versioned-macros/Cargo.toml
+++ b/crates/stackable-versioned-macros/Cargo.toml
@@ -15,7 +15,14 @@ all-features = true
 # are, however, used in test cases. This is a false-positive and an apparent
 # limitation of cargo-udeps. These entries can be removed once cargo-udeps
 # supports detecting usage of such dependencies.
-# development = ["k8s-openapi", "schemars", "serde_yaml", "stackable-versioned"]
+development = [
+  "k8s-openapi",
+  "kube",
+  "schemars",
+  "serde_yaml",
+  "stackable-versioned",
+  "tracing",
+]
 
 [lib]
 proc-macro = true
