--- a/crates/stackable-operator/Cargo.toml
+++ b/crates/stackable-operator/Cargo.toml
@@ -8,17 +8,22 @@ edition.workspace = true
 repository.workspace = true
 
 [features]
-full = ["time", "telemetry", "versioned"]
-default = ["telemetry", "versioned"]
+full = ["certs", "telemetry", "time", "versioned", "webhook"]
+default = ["telemetry", "time", "versioned"]
+
+certs = ["dep:stackable-certs"]
+telemetry = ["dep:stackable-telemetry"]
 time = ["dep:time"]
-telemetry = []
-versioned = []
+versioned = ["dep:stackable-versioned"]
+webhook = ["dep:stackable-webhook"]
 
 [dependencies]
+stackable-certs = { path = "../stackable-certs", optional = true }
 stackable-operator-derive = { path = "../stackable-operator-derive" }
 stackable-shared = { path = "../stackable-shared" }
-stackable-telemetry = { path = "../stackable-telemetry", features = ["clap"] }
-stackable-versioned = { path = "../stackable-versioned" }
+stackable-telemetry = { path = "../stackable-telemetry", optional = true, features = ["clap"] }
+stackable-versioned = { path = "../stackable-versioned", optional = true }
+stackable-webhook = { path = "../stackable-webhook", optional = true }
 
 chrono.workspace = true
 clap.workspace = true
