--- a/crates/stackable-shared/Cargo.toml
+++ b/crates/stackable-shared/Cargo.toml
@@ -7,11 +7,16 @@ edition.workspace = true
 repository.workspace = true
 
 [dependencies]
+k8s-openapi.workspace = true
 kube.workspace = true
+schemars.workspace = true
 semver.workspace = true
 serde.workspace = true
 serde_yaml.workspace = true
 snafu.workspace = true
+strum.workspace = true
+time.workspace = true
 
 [dev-dependencies]
 k8s-openapi.workspace = true
+rstest.workspace = true
