feat!: Add working conversion webhook with cert rotation (#1066)
* WIP

* Actually rotate certs

* clippy

* doctests

* HashMap -> Vec

* Set correct CA lifetime

* Result type

* fix rustdocs

* Add some docs

* Update rustdoc

* Handle cert rottion loop falures

* changelog

* link to decision

* fix rustdocs

* Rework CLI structs and names

* test: Remove CLI parsing from env var test

* Move subject_alterative_dns_names into Options

* changelog

* Remove mpsc in tests leftover

* docs: Use result of WebhookServer::new

* fmt

* Update crates/stackable-webhook/src/tls/mod.rs

Co-authored-by: Techassi <git@techassi.dev>

* fix suggestion

* capture in variable

* Move route into variable

* docs: Mention background cert rotation

* docs: Document TlsServer::new

* docs: Hint on downward API env var

* Rewrite certificate rotation logic

Co-authored-by: Techassi <git@techassi.dev>

* Avoid unwrap

* Make CertResolver pub, so docs pass

* Add missing await

* mount -> project

* Update crates/stackable-webhook/src/tls/mod.rs

Co-authored-by: Techassi <git@techassi.dev>

* changelog

* Add ConversionWebhookOptions struct

* PascalCase error variants

* changelog

* changelog

* fix rustdocs

* Update crates/stackable-operator/CHANGELOG.md

Co-authored-by: Techassi <git@techassi.dev>

* ReceiverCertificateFromChannel -> ReceiveCertificateFromChannel

* Remove double re-export

* fixup

* Update crates/stackable-webhook/src/tls/cert_resolver.rs

Co-authored-by: Techassi <git@techassi.dev>

* Use CryptoProvider::get_default

* Update crates/stackable-webhook/src/tls/cert_resolver.rs

Co-authored-by: Techassi <git@techassi.dev>

* changelog

* Remove CLI parsing tests

* clippy

* Move stuff into send_certificate_to_channel

* OptionsBuilder -> WebhookOptionsBuilder

* fix typo with read and write

* Refactor cert resolver

* chore: Dont use OperatorEnvironmentOptions

* fix outdated docs

* fix doc test

* fix clippy lints

* Improve rust docs

* Further improve docs


--- a/crates/stackable-webhook/Cargo.toml
+++ b/crates/stackable-webhook/Cargo.toml
@@ -11,6 +11,7 @@ stackable-certs = { path = "../stackable-certs", features = ["rustls"] }
 stackable-telemetry = { path = "../stackable-telemetry" }
 stackable-operator = { path = "../stackable-operator" }
 
+arc-swap.workspace = true
 axum.workspace = true
 futures-util.workspace = true
 hyper-util.workspace = true
@@ -18,6 +19,8 @@ hyper.workspace = true
 k8s-openapi.workspace = true
 kube.workspace = true
 opentelemetry.workspace = true
+opentelemetry-semantic-conventions.workspace = true
+rand.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
 tokio-rustls.workspace = true
@@ -26,3 +29,7 @@ tower-http.workspace = true
 tower.workspace = true
 tracing.workspace = true
 tracing-opentelemetry.workspace = true
+x509-cert.workspace = true
+
+[dev-dependencies]
+clap.workspace = true
