Remove commons mod. Add time feature

--- a/crates/stackable-shared/Cargo.toml
+++ b/crates/stackable-shared/Cargo.toml
@@ -6,6 +6,12 @@ license.workspace = true
 edition.workspace = true
 repository.workspace = true
 
+[features]
+full = ["time"]
+default = ["time"]
+
+time = ["dep:time"]
+
 [dependencies]
 k8s-openapi.workspace = true
 kube.workspace = true
@@ -15,7 +21,7 @@ serde.workspace = true
 serde_yaml.workspace = true
 snafu.workspace = true
 strum.workspace = true
-time.workspace = true
+time = { workspace = true, optional = true }
 
 [dev-dependencies]
 k8s-openapi.workspace = true
