--- a/crates/stackable-operator/Cargo.toml
+++ b/crates/stackable-operator/Cargo.toml
@@ -8,12 +8,11 @@ edition.workspace = true
 repository.workspace = true
 
 [features]
-full = ["certs", "telemetry", "time", "versioned", "webhook"]
-default = ["telemetry", "time", "versioned"]
+full = ["certs", "telemetry", "versioned", "webhook"]
+default = ["telemetry", "versioned"]
 
 certs = ["dep:stackable-certs"]
 telemetry = ["dep:stackable-telemetry"]
-time = ["dep:time"]
 versioned = ["dep:stackable-versioned"]
 webhook = ["dep:stackable-webhook"]
 
@@ -47,7 +46,6 @@ serde_yaml.workspace = true
 serde.workspace = true
 snafu.workspace = true
 strum.workspace = true
-time = { workspace = true, optional = true }
 tokio.workspace = true
 tracing.workspace = true
 tracing-appender.workspace = true
