--- a/crates/stackable-operator/Cargo.toml
+++ b/crates/stackable-operator/Cargo.toml
@@ -8,11 +8,12 @@ edition.workspace = true
 repository.workspace = true
 
 [features]
-full = ["certs", "telemetry", "versioned", "webhook"]
+full = ["certs", "telemetry", "versioned", "time", "webhook"]
 default = ["telemetry", "versioned"]
 
 certs = ["dep:stackable-certs"]
 telemetry = ["dep:stackable-telemetry"]
+time = ["stackable-shared/time"]
 versioned = ["dep:stackable-versioned"]
 webhook = ["dep:stackable-webhook"]
 
