Silence cargo udeps

--- a/crates/stackable-webhook/Cargo.toml
+++ b/crates/stackable-webhook/Cargo.toml
@@ -32,7 +32,11 @@ tracing-opentelemetry.workspace = true
 x509-cert.workspace = true
 
 [dev-dependencies]
-# Only needed for doc tests / examples
+# Only needed for doc tests
 stackable-operator = { path = "../stackable-operator" }
 
 clap.workspace = true
+
+# Only needed for tests, this is a false positive of "cargo udeps"
+[package.metadata.cargo-udeps.ignore]
+development = ["stackable-operator"]
