--- a/crates/stackable-operator/crds/PodListeners.yaml
+++ b/crates/stackable-operator/crds/PodListeners.yaml
@@ -23,7 +23,9 @@ spec:
             description: |-
               Informs users about Listeners that are bound by a given Pod.
 
-              This is not expected to be created or modified by users. It will be created by the Stackable Listener Operator when mounting the listener volume, and is always named `pod-{pod.metadata.uid}`.
+              This is not expected to be created or modified by users. It will be created by
+              the Stackable Listener Operator when mounting the listener volume, and is always
+              named `pod-{pod.metadata.uid}`.
             properties:
               listeners:
                 additionalProperties:
