--- a/crates/stackable-operator/crds/Listener.yaml
+++ b/crates/stackable-operator/crds/Listener.yaml
@@ -23,7 +23,11 @@ spec:
             description: |-
               Exposes a set of pods to the outside world.
 
-              Essentially a Stackable extension of a Kubernetes Service. Compared to a Service, a Listener changes three things: 1. It uses a cluster-level policy object (ListenerClass) to define how exactly the exposure works 2. It has a consistent API for reading back the exposed address(es) of the service 3. The Pod must mount a Volume referring to the Listener, which also allows ["sticky" scheduling](https://docs.stackable.tech/home/nightly/listener-operator/listener#_sticky_scheduling).
+              Essentially a Stackable extension of a Kubernetes Service. Compared to a Service, a Listener changes three things:
+              1. It uses a cluster-level policy object (ListenerClass) to define how exactly the exposure works
+              2. It has a consistent API for reading back the exposed address(es) of the service
+              3. The Pod must mount a Volume referring to the Listener, which also allows
+                 ["sticky" scheduling](https://docs.stackable.tech/home/nightly/listener-operator/listener#_sticky_scheduling).
 
               Learn more in the [Listener documentation](https://docs.stackable.tech/home/nightly/listener-operator/listener).
             properties:
@@ -105,7 +109,8 @@ spec:
                 description: |-
                   Port mappings for accessing the Listener on each Node that the Pods are currently running on.
 
-                  This is only intended for internal use by listener-operator itself. This will be left unset if using a ListenerClass that does not require Node-local access.
+                  This is only intended for internal use by listener-operator itself. This will be left unset if using a ListenerClass that does
+                  not require Node-local access.
                 nullable: true
                 type: object
               serviceName:
