chore!: Default ListenerClass externalTrafficPolicy to null

--- a/crates/stackable-operator/crds/ListenerClass.yaml
+++ b/crates/stackable-operator/crds/ListenerClass.yaml
@@ -62,17 +62,36 @@ spec:
                 description: Annotations that should be added to the Service object.
                 type: object
               serviceExternalTrafficPolicy:
-                default: Local
-                description: |-
-                  `externalTrafficPolicy` that should be set on the created [`Service`] objects.
+                anyOf:
+                - description: |-
+                    Service Internal Traffic Policy enables internal traffic restrictions to only route internal
+                    traffic to endpoints within the node the traffic originated from. The "internal" traffic
+                    here refers to traffic originated from Pods in the current cluster. This can help to reduce
+                    costs and improve performance. See [Kubernetes docs][k8s-docs].
 
-                  The default is `Local` (in contrast to `Cluster`), as we aim to direct traffic to a node running the workload
-                  and we should keep testing that as the primary configuration. Cluster is a fallback option for providers that
-                  break Local mode (IONOS so far).
-                enum:
-                - Cluster
-                - Local
-                type: string
+                    [k8s-docs]: https://kubernetes.io/docs/concepts/services-networking/service-traffic-policy/
+                  enum:
+                  - Cluster
+                  - Local
+                  type: string
+                - enum:
+                  - null
+                  nullable: true
+                description: |-
+                  `externalTrafficPolicy` that should be set on the created Service objects.
+
+                  It is a Kubernetes feature that controls how external traffic is routed to a Kubernetes
+                  Service.
+
+                  * `Cluster`: Kubernetes defaults to `Cluster`, which means that traffic is routed to any
+                     node in the Kubernetes cluster that has a pod running the service.
+                  * `Local`: Means that traffic is only routed to pods running on the same node as the
+                     Service.
+
+                  `Local` has a better performance as it avoids a network hop, but requires a "clever"
+                  LoadBalancer, that respects what Pods run on which nodes and routes traffic only to that
+                  nodes accordingly. Some cloud providers (such as IONOS) or bare metal installations
+                  don't have such features, so the default is `Cluster` to work everywhere.
               serviceType:
                 description: The method used to access the services.
                 enum:
