--- a/crates/stackable-operator/crds/ListenerClass.yaml
+++ b/crates/stackable-operator/crds/ListenerClass.yaml
@@ -44,7 +44,7 @@ spec:
               pinnedNodePorts:
                 default: false
                 description: |-
-                  Wether or not a Pod exposed using a NodePort should be pinned to a specific Kubernetes node.
+                  Whether or not a Pod exposed using a NodePort should be pinned to a specific Kubernetes node.
 
                   By pinning the Pod to a specific (stable) Kubernetes node, stable addresses can be
                   provided using NodePorts. The pinning is achieved by listener-operator setting the
