Use patched kube

--- a/crates/stackable-operator/crds/DummyCluster.yaml
+++ b/crates/stackable-operator/crds/DummyCluster.yaml
@@ -129,12 +129,11 @@ spec:
                                       - ERROR
                                       - FATAL
                                       - NONE
-                                      - null
                                       nullable: true
                                       type: string
                                   type: object
                                 custom:
-                                  description: Custom log configuration provided in a ConfigMap
+                                  description: Log configuration provided in a ConfigMap
                                   properties:
                                     configMap:
                                       description: ConfigMap containing the log configuration files
@@ -157,7 +156,6 @@ spec:
                                       - ERROR
                                       - FATAL
                                       - NONE
-                                      - null
                                       nullable: true
                                       type: string
                                   type: object
@@ -177,7 +175,6 @@ spec:
                                         - ERROR
                                         - FATAL
                                         - NONE
-                                        - null
                                         nullable: true
                                         type: string
                                     type: object
@@ -419,12 +416,11 @@ spec:
                                             - ERROR
                                             - FATAL
                                             - NONE
-                                            - null
                                             nullable: true
                                             type: string
                                         type: object
                                       custom:
-                                        description: Custom log configuration provided in a ConfigMap
+                                        description: Log configuration provided in a ConfigMap
                                         properties:
                                           configMap:
                                             description: ConfigMap containing the log configuration files
@@ -447,7 +443,6 @@ spec:
                                             - ERROR
                                             - FATAL
                                             - NONE
-                                            - null
                                             nullable: true
                                             type: string
                                         type: object
@@ -467,7 +462,6 @@ spec:
                                               - ERROR
                                               - FATAL
                                               - NONE
-                                              - null
                                               nullable: true
                                               type: string
                                           type: object
