--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,3 +93,6 @@ rsa.opt-level = 3
 [profile.dev.package]
 insta.opt-level = 3
 similar.opt-level = 3
+
+[patch.crates-io]
+kube = { git = "https://github.com/stackabletech/kube-rs", branch = "test/add-enum-tests" }
