fix!: Default ListenerClass externalTrafficPolicy to null (#1107)
* chore!: Default ListenerClass externalTrafficPolicy to null

* changelog

* Update crates/stackable-operator/src/crd/listener/class/mod.rs

Co-authored-by: Techassi <git@techassi.dev>

* Update crates/stackable-operator/src/crd/listener/core/mod.rs

* Add dec comment of defaults

* Use patched kube

* Update kube branch

* Update crates/stackable-operator/src/crd/listener/class/mod.rs

Co-authored-by: Techassi <git@techassi.dev>

---------

Co-authored-by: Techassi <git@techassi.dev>

--- a/crates/stackable-operator/crds/ListenerClass.yaml
+++ b/crates/stackable-operator/crds/ListenerClass.yaml
@@ -77,16 +77,17 @@ spec:
                 description: Annotations that should be added to the Service object.
                 type: object
               serviceExternalTrafficPolicy:
-                default: Local
                 description: |-
-                  `externalTrafficPolicy` that should be set on the created [`Service`] objects.
+                  Service Internal Traffic Policy enables internal traffic restrictions to only route internal
+                  traffic to endpoints within the node the traffic originated from. The "internal" traffic
+                  here refers to traffic originated from Pods in the current cluster. This can help to reduce
+                  costs and improve performance. See [Kubernetes docs][k8s-docs].
 
-                  The default is `Local` (in contrast to `Cluster`), as we aim to direct traffic to a node running the workload
-                  and we should keep testing that as the primary configuration. Cluster is a fallback option for providers that
-                  break Local mode (IONOS so far).
+                  [k8s-docs]: https://kubernetes.io/docs/concepts/services-networking/service-traffic-policy/
                 enum:
                 - Cluster
                 - Local
+                nullable: true
                 type: string
               serviceType:
                 description: The method used to access the services.
